hero section completed

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
     <!-- main sectionj -->
     <main>
       <section class="hero">
-        <div>
-          <img src="/images/online-payment.png" alt="online-payment">
+        <div class="hero-image-box">
+          <img class="hero-img" src="/images/online-payment.png" alt="online-payment">
         </div>
-        <div>
-          <p>Trusted by 8,000+ Brands</p>
-          <h1>A Fresh Perspective on Your E-Commerce Store.</h1>
-          <p>E-Store provides robust, conversion-focused UX reports and the design to go with it.</p>
+        <div class="hero-text-box">
+          <p class="hero-text-para-one">Trusted by 8,000+ Brands</p>
+          <h1 class="hero-text-headline">A Fresh Perspective on Your <br> E-Commerce Store.</h1>
+          <p class="hero-text-para-two">E-Store provides robust, conversion-focused UX <br> reports and the design to go with it.</p>
           <button class="book-a-call">Book A Call</button>
         </div>
       </section>
