dynamically data loaded from api

--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
           <button class="book-a-call">Book A Call</button>
         </div>
       </section>
+      <!-- Display Product-->
+      <section>
+        <div class="product-container" id="product-container">
+          <!-- here will display the product -->
+        </div>
+      </section>
     </main>
     <script src="/Js/app.js"></script>
   </body>
