completed the whole project

--- a/index.html
+++ b/index.html
@@ -77,11 +77,40 @@
       </section>
       <!-- Display Product-->
       <section>
+        <div class="display-product-headlines">
+          <p>CONVERSION-FOCUSED DESIGN</p>
+          <h1>Actionable Advice to Build Brand Trust</h1>
+          <h4>Our team has spent over a decade designing digital experiences for the biggest brands around the world. Now you can get expert advice, at a fraction of the cost.</h4>
+        </div>
         <div class="product-container" id="product-container">
           <!-- here will display the product -->
         </div>
       </section>
     </main>
+
+    <footer>
+      <div class="footer-box">
+        <div class="footer-boxes">
+          <a href="#">Reports</a>
+          <a href="#">Pricing</a>
+          <a href="#">Pages</a>
+          <a href="#">Careers</a>
+        </div>
+        <div class="footer-boxes">
+          <a href="#">Blog</a>
+          <a href="#">Reviews</a>
+          <a href="#">Account</a>
+          <a href="#">Brand First CRO</a>
+        </div>
+        <div class="footer-boxes">
+          <a href="#">Partnerships</a>
+          <a href="#">Email Us</a>
+          <a href="#">Terms of Use</a>
+          <a href="#">Privacy</a>
+        </div>
+      </div>
+      <p class="copyright">Copyright 2023 © E-Store</p>
+    </footer>
     <script src="/Js/app.js"></script>
   </body>
 </html>
