--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     <!-- main sectionj -->
     <main>
       <section class="hero">
-        <div class="hero-image-box">
+        <div class="hero-image-box ">
           <img
-            class="hero-img"
+            class="hero-img scale-up-center"
             src="/images/online-payment.png"
             alt="online-payment"
           />
