--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-Store</title>
+    <link rel="shortcut icon" href="/images/shopping.png" type="image/x-icon">
     <!-- Font Awessome -->
     <link
       rel="stylesheet"
